--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "dayjs": "^1.11.8",
+    "hashconnect": "^0.2.4",
     "nanoid": "^4.0.2",
     "vue-toast-notification": "^3.1.1"
   }
