--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "node": "18.16.1"
   },
   "dependencies": {
+    "bufferutil": "^4.0.7",
     "consola": "^3.2.2",
     "dayjs": "^1.11.8",
     "hashconnect": "^0.2.4",
     "nanoid": "^4.0.2",
+    "utf-8-validate": "^6.0.3",
     "vue-toast-notification": "^3.1.1"
   }
 }
