--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint-staged": "^13.2.3",
     "nuxt": "^3.6.1",
     "prettier": "^2.8.8",
+    "prisma": "^4.16.2",
     "vite-plugin-node-polyfills": "^0.9.0"
   },
   "volta": {
