--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "nuxt": "^3.6.1",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "vite-plugin-node-polyfills": "^0.9.0"
   },
   "volta": {
     "node": "18.16.1"
