--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bufferutil": "^4.0.7",
     "consola": "^3.2.2",
     "dayjs": "^1.11.8",
+    "firebase": "^9.23.0",
     "hashconnect": "^0.2.4",
     "nanoid": "^4.0.2",
     "utf-8-validate": "^6.0.3",
