--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node": "18.16.1"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.7.0",
     "@formkit/nuxt": "^0.17.4",
     "@hashgraph/sdk": "^2.29.0",
     "@prisma/client": "4.16.2",
