--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "db:migrate": "prisma migrate dev --name",
-    "postinstall": "nuxt prepare && husky install"
+    "postinstall": "nuxt prepare && husky install && prisma generate"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.6",
